<resources>
    <string name="app_name">B_ToDoList</string>
    <string name="menu_new_todo">Neues Todo</string>
    <string name="menu_settings">Einstellungen</string>
    <string name="menu_sort_priority">Nach Priorität sortieren</string>
    <string name="menu_sort_date">Nach Datum sortieren</string>
    <string name="todo_title_placeholder">Todo-Titel</string>
    <string name="todo_description_placeholder">Beschreibung</string>
    <string name="todo_priority_placeholder">Priorität: Mittel</string>
    <string name="todo_categories_placeholder">Kategorie(n): Allgemein</string>
    <string name="todo_due_date_placeholder">Fällig bis: Kein Datum</string>
    <string name="todo_status_open">Offen</string>
    <string name="todo_status_done">Erledigt</string>
    <string name="todo_priority_format">Priorität: %1$s</string>
    <string name="todo_categories_format">Kategorie(n): %1$s</string>
    <string name="todo_due_date_format">Fällig bis: %1$s</string>
    <string name="no_date">Kein Datum</string>
    <string name="empty_todo_list">Keine Todos vorhanden</string>
    <string name="detail_title">Todo bearbeiten</string>
    <string name="label_title">Titel</string>
    <string name="label_description">Beschreibung</string>
    <string name="label_priority">Priorität</string>
    <string name="label_categories">Kategorie(n)</string>
    <string name="label_done">Erledigt</string>
    <string name="label_due_date">Fällig bis</string>
    <string name="button_choose_date">Datum auswählen</string>
    <string name="button_save">Speichern</string>
    <string name="button_delete">Löschen</string>
    <string name="error_title_required">Bitte einen Titel eingeben</string>
    <string name="todo_saved">Todo gespeichert</string>
    <string name="todo_deleted">Todo gelöscht</string>
    <string name="pref_font_size_title">Schriftgröße der Liste</string>
    <string name="pref_font_size_summary">Legt die Schriftgröße der Todo-Einträge fest</string>
    <string-array name="priority_values">
        <item>Hoch</item>
        <item>Mittel</item>
        <item>Niedrig</item>
    </string-array>
    <string-array name="font_size_labels">
        <item>14 sp</item>
        <item>16 sp</item>
        <item>18 sp</item>
        <item>20 sp</item>
        <item>22 sp</item>
        <item>24 sp</item>
    </string-array>
    <string-array name="font_size_values">
        <item>14</item>
        <item>16</item>
        <item>18</item>
        <item>20</item>
        <item>22</item>
        <item>24</item>
    </string-array>
</resources>
